crates/ridge-typecheck/tests/snapshots/snapshots__t17_game_of_life.snap
---
source: crates/ridge-typecheck/tests/snapshots.rs
expression: snap
---
TypecheckSnapshot {
    errors: [],
    module_count: 1,
    tycon_count: 101,
    node_types_populated: 403,
    schemes_populated: 9,
    inferred_caps_real_keys: 9,
}
