crates/ridge-typecheck/tests/snapshots/snapshots__t17_log_analyzer.snap
---
source: crates/ridge-typecheck/tests/snapshots.rs
expression: snap
---
TypecheckSnapshot {
    errors: [],
    module_count: 1,
    tycon_count: 103,
    node_types_populated: 283,
    schemes_populated: 9,
    inferred_caps_real_keys: 9,
}
