crates/ridge-typecheck/tests/snapshots/snapshots__t17_rate_limiter.snap
---
source: crates/ridge-typecheck/tests/snapshots.rs
expression: snap
---
TypecheckSnapshot {
    errors: [],
    module_count: 1,
    tycon_count: 106,
    node_types_populated: 214,
    schemes_populated: 1,
    inferred_caps_real_keys: 1,
}
