crates/ridge-typecheck/tests/snapshots/snapshots__t17_url_shortener.snap
---
source: crates/ridge-typecheck/tests/snapshots.rs
expression: snap
---
TypecheckSnapshot {
    errors: [],
    module_count: 1,
    tycon_count: 101,
    node_types_populated: 171,
    schemes_populated: 7,
    inferred_caps_real_keys: 7,
}
